# self-service-mlops

./: .coveragerc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh
.github/actions/get-project-python-version/: action.yaml
.github/workflows/: ci.yaml  release.yaml  test_components.yaml
dev/: requirements.txt
helm-charts/kafka/: values.yaml
helm-charts/monitoring/filebeat/: values.yaml
helm-charts/monitoring/kibana/: values.yaml
helm-charts/monitoring/kube-prometheus-stack/: Chart.yaml
helm-charts/monitoring/kube-prometheus-stack/templates/prometheus/rules-1.14/: kubernetes-resources.yaml
kafka/: .dockerignore  Dockerfile  get_artifacts_s3_path.py  interact  kafka_connector_consumer.py  kafka_connector_consumer_deployment.yaml  kafka_connector_consumer_pod.yaml  kafka_connector_pod.yaml  kafka_connector_producer.py  kafka_connector_producer_deployment.yaml  kafka_connector_producer_pod.yaml  kserve_sa.yaml  kserve_template.yaml  mock_webhook  model_endpoint.py  requirements.txt  utils.py
mlops-platform/: .dockerignore  Dockerfile  check_k8s_resources.py  get_artifacts_s3_path.py  kafka_connector_consumer.py  kafka_connector_consumer_deployment.yaml  kafka_connector_producer.py  kafka_connector_producer_deployment.yaml  kserve_sa.yaml  kserve_template.yaml  mock_webhook.sh  model_endpoint.py  notify_endpoint_creation.py  notify_endpoint_creation_deployment.yaml  requirements.txt  utils.py
mlops_platform/: Dockerfile  get_artifacts_s3_path.py  kafka_connector_consumer.py  kafka_connector_consumer_deployment.yaml  kafka_connector_producer.py  model_endpoint.py  notify_endpoint_creation.py  utils.py
model-endpoint/: input.json  prediction
model-endpoint-example/: input.json  prediction
platform/: get_artifacts_s3_path.py  interact  kafka_connector_consumer.py  kserve_template.yaml  model_endpoint.py  notify_endpoint_creation.py  notify_endpoint_creation_deployment.yaml  utils.py
terraform/k8s/: .terraform.lock.hcl  main.tf  variables.tf
terraform/k8s/modules/: main.tf  providers.tf  variables.tf
tests/: test_check_k8s_resources.py  test_kafka_connector_consumer.py  test_model_endpoint.py
