[project]
name = "self-service-mlops"
version = "0.1.0"
description = ""
authors = [
    { name = "Safarveisi", email = "sajad.safarveisi@gmail.com" },
    { name = "Milad Norouzi", email = "infraartists@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [

]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ipykernel = "^6.30.1"
boto3 = "1.35.99"
mlflow = "2.20.0"
kubernetes = "33.1.0"
pre-commit = "^4.3.0"
